fixed output display. shifted visual left

--- a/assets/tutorials/3/visualization/knob/style.css
+++ b/assets/tutorials/3/visualization/knob/style.css
@@ -57,10 +57,10 @@ text {
 
 #controls {
   position: relative;
-  left: 200px;
+
 }
 #commentary {
   position: relative;
-left: 200px;
+
 
 }
